[tool.poetry]
name = "dimensionality-reduction-jmsv"
version = "0.1.0"
description = "Package with the PCA, SVD and t-SNE methods for dimensionality reduction"
license = "MIT"
authors = ["Mauricio Sierra"]
maintainers = ["Send_Mail <mauricio@gmail.com>"]
readme = "README.md"

homepage = "https://pypi.org/project/dimensionality-reduction-jmsv/#history"
repository = "https://github.com"

keywords = ["SVD", "PCA", "t-SNE"]

classifiers = [
    'Programming Language :: Python', ]

packages = [{include = "dimensionality_reduction"}]



[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"